# rocketdlna

./: .gitignore  CMakeLists.txt  README.md  metadata.c  minidlna.c  minidlna.conf  options.c  options.h  scanner.c  scanner_sqlite.h  sql.c  tivo_commands.c  upnpglobalvars.c  upnpglobalvars.h  upnpreplyparse.c  upnpreplyparse.h  upnpsoap.c  utils.h
cmake/modules/: FindAvahi.cmake  FindFFmpeg.cmake  FindOgg.cmake  FindVorbis.cmake
debian/: changelog
src/: CMakeLists.txt  config.h.in
